tinc-build/src/codegen/cel/functions/snapshots/tinc_build__codegen__cel__functions__contains__tests__contains_runtime_repeated.snap
---
source: tinc-build/src/codegen/cel/functions/contains.rs
expression: "postcompile::compile_str!(postcompile::config!\n{\n    test: true, dependencies:\n    vec![postcompile::Dependency::path(\"tinc\", \"../tinc\"),],\n}, quote!\n{\n    fn contains(input: &Vec<String>) -> Result<bool,\n    ::tinc::__private::cel::CelError<'_>> { Ok(#output) } #[test] fn\n    test_contains()\n    {\n        assert_eq!(contains(&vec![\"value\".into()]).unwrap(), true);\n        assert_eq!(contains(&vec![\"not_value\".into()]).unwrap(), false);\n        assert_eq!(contains(&vec![\"xd\".into(), \"value\".into()]).unwrap(),\n        true);\n    }\n},)"
---
exit status: 0
--- test_stdout
running 1 test
.
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in [ELAPSED]s
--- expanded
#![feature(prelude_import)]
extern crate std;
#[prelude_import]
use std::prelude::rust_2024::*;
fn contains(input: &Vec<String>) -> Result<bool, ::tinc::__private::cel::CelError<'_>> {
    Ok(
        ::tinc::__private::cel::array_contains(
            input,
            ::tinc::__private::cel::CelValue::String(
                ::tinc::__private::cel::CelString::Borrowed("value"),
            ),
        ),
    )
}
